--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -9,18 +9,34 @@ jobs:
     # Specify the execution environment. You can specify an image from Dockerhub or use one of our Convenience Images from CircleCI's Developer Hub.
     # See: https://circleci.com/docs/2.0/configuration-reference/#docker-machine-macos-windows-executor
     docker:
-      - image: cimg/base:stable
+      - image: circleci/openjdk:8-jdk
     # Add steps to the job
     # See: https://circleci.com/docs/2.0/configuration-reference/#steps
     steps:
-      - checkout
       - run:
-          name: "Say hello"
-          command: "echo Hello, World!"
+          name: Save test results
+          command: |
+            mkdir -p ~/cucumber
+            bundle exec cucumber --format junit --out ~/cucumber/junit.xml
+          when: always
+      - store_test_results:
+          path: ~/cucumber
+      - store_artifacts:
+          path: ~/cucumber
+        
+
+
+      - run: mvn test
 
 # Invoke jobs via workflows
 # See: https://circleci.com/docs/2.0/configuration-reference/#workflows
+orbs:
+  maven: circleci/maven@1.2.0
+  maven-build: inclasstoday/maven-build@1.0.1
+
 workflows:
-  say-hello-workflow:
+  maven_test:
     jobs:
-      - say-hello
+      -  maven/test
+      - maven-build/docker_build
+
