--- a/pom.xml
+++ b/pom.xml
@@ -82,6 +82,14 @@
             <version>4.12</version>
             <scope>test</scope>
         </dependency>
+
+
+        <dependency>
+            <groupId>com.relevantcodes</groupId>
+            <artifactId>extentreports</artifactId>
+            <version>2.41.2</version>
+        </dependency>
+
     </dependencies>
 
     <artifactId>Mobiquity-Task</artifactId>
